Extracted goal card styling into separate class.

--- a/src/styles/_blog-post-style.scss
+++ b/src/styles/_blog-post-style.scss
@@ -10,6 +10,10 @@
     grid-column: 1 / 2;
   }
 
+  h5 {
+    margin-bottom: 2rem;
+  }
+
   img {
     background-color: var(--color-dark);
     border: var(--border-size) solid var(--color-dark);
