--- a/src/styles/_blog-style.scss
+++ b/src/styles/_blog-style.scss
@@ -14,7 +14,7 @@
     var(--color-yellow) 
     url('../../public/images/svg/blob-scene-haikei.svg')
     no-repeat 
-    top -10px
+    top 
     left -10px;
   background-size: cover;
   transition: filter 5s ease-in-out;
