--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -830,6 +830,27 @@ button:active {
   }
 }
 
+.streaming__banner {
+  min-width: 33vw;
+  min-height: calc(42vh - 8rem);
+  padding: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: var(--color-yellow) url("../../public/images/svg/blob-scene-haikei.svg") no-repeat top left;
+  background-size: cover;
+}
+
 /* BANNER */
 svg {
   /* height: calc(100vh - 8rem); */
