--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,6 +5,7 @@ $font-dragon: "UnifrakturMaguntia", "Times New Roman", serif;
 @import "_home-style";
 @import "_blog-style";
 @import "_blog-post-style";
+@import "_streaming-style";
 @import "_svg-style";
 @import url('https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap');
 
