--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -1,18 +1,76 @@
 .streaming__banner {
   min-width: 33vw;
-  min-height: calc(42vh - 8rem);
-  padding: 2rem;
+  min-height: calc(99vh - 8rem);
   
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: stretch;
+  justify-content: top;
+  gap: 1rem;
+  
+  & section:first-child {
+    min-height: 38%;
+    position: sticky;
+    top: 8.3rem;
 
-  background: 
+    background: 
     var(--color-yellow) 
     url('../../public/images/svg/blob-scene-haikei.svg')
     no-repeat 
     top 
     left;
-  background-size: cover;
+
+    background-size: cover;
+  }
+  
+  section:nth-child(2) {
+    background-color: var(--color-grey);
+    z-index: 1;
+
+    ul {
+      display: flex;
+      flex-direction: column;
+
+      li {
+        padding: 2rem;
+
+        border-bottom: 1rem solid var(--color-dark);
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        button {
+          --button-color: var(--color-blood);
+          padding: 0.5rem 1rem;
+          border: 2px solid var(--button-color);
+          color: var(--button-color);
+          box-shadow: none;
+          font-size: var(--h6);
+        }
+      }
+    }
+  }
 }
+
+.streaming__main {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  section {
+    background-color: var(--color-grey);
+    padding: 2rem;
+  }
+
+  ul {
+  --indent: 3rem;
+  transform: translateX(var(--indent));
+  width: calc(66vw - calc(var(--indent) * 3));
+
+    li { 
+      list-style-type: disc;
+    }
+  }
+}
+
