--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -832,8 +832,7 @@ button:active {
 
 .streaming__banner {
   min-width: 33vw;
-  min-height: calc(42vh - 8rem);
-  padding: 2rem;
+  min-height: calc(99vh - 8rem);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -841,14 +840,88 @@ button:active {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: top;
+      -ms-flex-pack: top;
+          justify-content: top;
+  gap: 1rem;
+}
+
+.streaming__banner section:first-child {
+  min-height: 38%;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 8.3rem;
+  background: var(--color-yellow) url("../../public/images/svg/blob-scene-haikei.svg") no-repeat top left;
+  background-size: cover;
+}
+
+.streaming__banner section:nth-child(2) {
+  background-color: var(--color-grey);
+  z-index: 1;
+}
+
+.streaming__banner section:nth-child(2) ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.streaming__banner section:nth-child(2) ul li {
+  padding: 2rem;
+  border-bottom: 1rem solid var(--color-dark);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background: var(--color-yellow) url("../../public/images/svg/blob-scene-haikei.svg") no-repeat top left;
-  background-size: cover;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.streaming__banner section:nth-child(2) ul li button {
+  --button-color: var(--color-blood);
+  padding: 0.5rem 1rem;
+  border: 2px solid var(--button-color);
+  color: var(--button-color);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  font-size: var(--h6);
+}
+
+.streaming__main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+
+.streaming__main section {
+  background-color: var(--color-grey);
+  padding: 2rem;
+}
+
+.streaming__main ul {
+  --indent: 3rem;
+  -webkit-transform: translateX(var(--indent));
+          transform: translateX(var(--indent));
+  width: calc(66vw - calc(var(--indent) * 3));
+}
+
+.streaming__main ul li {
+  list-style-type: disc;
 }
 
 /* BANNER */
