--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -32,7 +32,7 @@
       flex-direction: column;
 
       li {
-        padding: 2rem;
+        // padding: 2rem;
 
         border-bottom: 1rem solid var(--color-dark);
 
@@ -41,12 +41,37 @@
         justify-content: space-between;
 
         button {
-          --button-color: var(--color-blood);
+          --button-color: rgb(124, 124, 124);
+
+          height: 6rem;
+          border: none;  
           padding: 0.5rem 1rem;
-          border: 2px solid var(--button-color);
-          color: var(--button-color);
+          
+          background-color: var(--color-dark);
           box-shadow: none;
+          color: var(--button-color);
           font-size: var(--h6);
+          opacity: .15;
+
+          transition: calc(var(--speed-slow) * 3);
+
+          &:hover {
+            background-color: var(--color-blood);
+            border-radius: 0;
+            box-shadow: 0rem .3rem 1px rgba(0, 0, 0, 0.25);
+            opacity: 1;
+
+            transition: calc(var(--speed-fast) / 2);
+          }
+
+          &:active, &:focus {
+            border-radius: 0;
+            border: 0;
+          }
+        }
+
+        h5 {
+          margin-left: 2rem;
         }
       }
     }
