--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -874,7 +874,6 @@ button:active {
 }
 
 .streaming__banner section:nth-child(2) ul li {
-  padding: 2rem;
   border-bottom: 1rem solid var(--color-dark);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -888,13 +887,37 @@ button:active {
 }
 
 .streaming__banner section:nth-child(2) ul li button {
-  --button-color: var(--color-blood);
+  --button-color: rgb(124, 124, 124);
+  height: 6rem;
+  border: none;
   padding: 0.5rem 1rem;
-  border: 2px solid var(--button-color);
-  color: var(--button-color);
+  background-color: var(--color-dark);
   -webkit-box-shadow: none;
           box-shadow: none;
+  color: var(--button-color);
   font-size: var(--h6);
+  opacity: .15;
+  -webkit-transition: calc(var(--speed-slow) * 3);
+  transition: calc(var(--speed-slow) * 3);
+}
+
+.streaming__banner section:nth-child(2) ul li button:hover {
+  background-color: var(--color-blood);
+  border-radius: 0;
+  -webkit-box-shadow: 0rem 0.3rem 1px rgba(0, 0, 0, 0.25);
+          box-shadow: 0rem 0.3rem 1px rgba(0, 0, 0, 0.25);
+  opacity: 1;
+  -webkit-transition: calc(var(--speed-fast) / 2);
+  transition: calc(var(--speed-fast) / 2);
+}
+
+.streaming__banner section:nth-child(2) ul li button:active, .streaming__banner section:nth-child(2) ul li button:focus {
+  border-radius: 0;
+  border: 0;
+}
+
+.streaming__banner section:nth-child(2) ul li h5 {
+  margin-left: 2rem;
 }
 
 .streaming__main {
