Done for the day. Front page design basically done

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -19,6 +19,7 @@ $font-dragon: "UnifrakturMaguntia", "Times New Roman", serif;
   --color-white: #eeeeee;
   --color-blood: #af3333;
   --color-dark: #1e1e1e;
+  --color-green: #6a9955;
   --color-grey: #d2d2ce;
   --color-orange: #f66c03;
   --color-yellow: #ffb532;
