--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -1,5 +1,5 @@
 .streaming__banner {
-  min-width: 33vw;
+  min-width: 38vw;
   min-height: calc(99vh - 8rem);
   
   display: flex;
@@ -10,8 +10,6 @@
   
   & section:first-child {
     min-height: 13vh;
-    position: sticky;
-    top: 8.3rem;
 
     background: 
     var(--color-yellow) 
@@ -24,9 +22,7 @@
   }
   
   section:nth-child(2) {
-    height: 75.5vh;
     background-color: var(--color-grey);
-    overflow-y: scroll;
     z-index: 1;
 
     ul {
@@ -81,6 +77,7 @@
 }
 
 .streaming__main {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -89,18 +86,30 @@
     background-color: var(--color-grey);
     padding: 2rem;
 
-    &.toolbar {
-    padding: 0;
+    div.toolbar {
+      padding: 0;
+
+      display: flex;
+      justify-content: space-between;
+      
+      background-color: var(--color-blood);
+      color: var(--color-white);
 
       ul {
         padding: 0;
         margin: 0;
+
         display: flex;
+        flex-direction: row;
         justify-content: space-between;
 
+        color: var(--color-yellow);
+
         li {
+          border: none;
           padding: 2rem; 
-          list-style-type: none; }
+          list-style-type: none; 
+        }
       }
     }
 
@@ -140,7 +149,7 @@
             transition: calc(var(--speed-slow) * 3);
 
             &:hover {
-              background-color: var(--color-blood);
+              background-color: var(--color-green);
               border-radius: 0;
               box-shadow: 0rem .3rem 1px rgba(0, 0, 0, 0.25);
               opacity: 1;
@@ -152,6 +161,12 @@
               border-radius: 0;
               border: 0;
             }
+          }
+
+          div {
+            display: flex;
+            align-items: center;
+            flex-direction: row;
           }
 
           h5 {
