--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -831,7 +831,7 @@ button:active {
 }
 
 .streaming__banner {
-  min-width: 33vw;
+  min-width: 38vw;
   min-height: calc(99vh - 8rem);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -851,17 +851,12 @@ button:active {
 
 .streaming__banner section:first-child {
   min-height: 13vh;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 8.3rem;
   background: var(--color-yellow) url("../../public/images/svg/blob-scene-haikei.svg") no-repeat top left;
   background-size: cover;
 }
 
 .streaming__banner section:nth-child(2) {
-  height: 75.5vh;
   background-color: var(--color-grey);
-  overflow-y: scroll;
   z-index: 1;
 }
 
@@ -923,6 +918,7 @@ button:active {
 }
 
 .streaming__main {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -938,22 +934,36 @@ button:active {
   padding: 2rem;
 }
 
-.streaming__main section.toolbar {
+.streaming__main section div.toolbar {
   padding: 0;
-}
-
-.streaming__main section.toolbar ul {
-  padding: 0;
-  margin: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  background-color: var(--color-blood);
+  color: var(--color-white);
 }
 
-.streaming__main section.toolbar ul li {
+.streaming__main section div.toolbar ul {
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: var(--color-yellow);
+}
+
+.streaming__main section div.toolbar ul li {
+  border: none;
   padding: 2rem;
   list-style-type: none;
 }
@@ -1005,7 +1015,7 @@ button:active {
 }
 
 .streaming__main section.results ul li button:hover {
-  background-color: var(--color-blood);
+  background-color: var(--color-green);
   border-radius: 0;
   -webkit-box-shadow: 0rem 0.3rem 1px rgba(0, 0, 0, 0.25);
           box-shadow: 0rem 0.3rem 1px rgba(0, 0, 0, 0.25);
@@ -1017,6 +1027,19 @@ button:active {
 .streaming__main section.results ul li button:active, .streaming__main section.results ul li button:focus {
   border-radius: 0;
   border: 0;
+}
+
+.streaming__main section.results ul li div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .streaming__main section.results ul li h5 {
@@ -1110,6 +1133,7 @@ svg {
   --color-white: #eeeeee;
   --color-blood: #af3333;
   --color-dark: #1e1e1e;
+  --color-green: #6a9955;
   --color-grey: #d2d2ce;
   --color-orange: #f66c03;
   --color-yellow: #ffb532;
