--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -154,7 +154,6 @@
           display: flex;
           align-items: center;
           justify-content: space-between;
-          gap: 1rem;
 
           button {
             --button-color: rgb(124, 124, 124);
@@ -163,18 +162,39 @@
             border: none;  
             padding: 0.5rem 1rem;
             
-            background-color: var(--color-dark);
             box-shadow: none;
             color: var(--button-color);
             font-size: var(--h6);
-            opacity: .15;
+            
 
             transition: calc(var(--speed-slow) * 3);
 
+            &.favButton {
+              background-color: var(--color-dark);
+              opacity: .15;
+
+              &:hover {
+                background-color: var(--color-green);
+              }
+            }
+
+            &.trackButton {
+              padding: 2rem;
+              color: var(--color-dark);
+              text-align: left;
+              flex-grow: 3;
+
+              &:hover {
+                background-color: var(--color-white);
+              }
+
+              &:active {
+                scale: 1;
+              }
+            }
+
             &:hover {
-              background-color: var(--color-green);
               border-radius: 0;
-              box-shadow: 0rem .3rem 1px rgba(0, 0, 0, 0.25);
               opacity: 1;
 
               transition: calc(var(--speed-fast) / 2);
