--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -165,6 +165,11 @@ a {
   }
 }
 
+button {
+  background-color: var(--color-grey);
+  cursor: pointer;
+}
+
 h1 { font-size: var(--h1); }
 h2 { font-size: var(--h2); }
 h3 { font-size: var(--h3); }
