--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -120,6 +120,10 @@
 /* LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST */
 
 .landing-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
   background: var(--bg-pos); 
   width: 100%;
 
@@ -130,7 +134,7 @@
 
   ul {
     display: grid;
-    grid-gap: 1rem;
+    gap: 1rem;
     mix-blend-mode: lighten;
 
     h2 {
