--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -469,6 +469,14 @@ template {
 
 /* LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST - LANDING PAGE LIST */
 .landing-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
   background: var(--bg-pos);
   width: 100%;
 }
@@ -481,7 +489,7 @@ template {
 .landing-list ul {
   display: -ms-grid;
   display: grid;
-  grid-gap: 1rem;
+  gap: 1rem;
   mix-blend-mode: lighten;
 }
 
@@ -686,11 +694,7 @@ template {
 
 /* ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE ASIDE */
 aside {
-  margin-top: 1rem;
   padding: 2rem;
-  -ms-flex-item-align: start;
-      -ms-grid-row-align: start;
-      align-self: start;
   background-color: var(--color-white);
 }
 
