--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -886,6 +886,16 @@ button.dark-mode-button:active {
   height: 6rem;
   border: none;
   padding: 0.5rem 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1rem;
   -webkit-box-shadow: none;
           box-shadow: none;
   font-size: var(--h6);
